responsive(no burger)[fixed imgs position]

--- a/app/index.pug
+++ b/app/index.pug
@@ -5,53 +5,54 @@ head
     title Nura elite
     link(rel="icon" type="image/x-icon" href="./img/favicon.png")
     link(rel='stylesheet' href='./css/main.css')
-
 body
     header
-        nav.container
-            .header__logo
-                a(href="#")
-                    img(src="./img/logo.png" alt="Logo" title="Nura elite")
+        nav
+            .container
+                .header__logo
+                    a(href="#")
+                        img(src="./img/logo.png" alt="Logo" title="Nura elite")
 
-            .header__navigation
-                .header__navigation__contacts
-                    .header__navigation__contacts_messangers
-                        a(href="https://wa.me/4957777777" target="_blank")
-                            img(src="./img/whatsapp.svg")
-                    .header__navigation__contacts_numbers
-                        a(href="tel:+77000011888") +7 700 001 18 88
-                .header__navigation__nav_menu
-                    ul
-                        li
-                            a(href="#") About project
-                        li
-                            a(href="#") Location
-                        li
-                            a(href="#") Benefits
-                        li
-                            a(href="#") Why we are
-                        li
-                             a(href="#") Payments methods
-                        li
-                            a(href="#") Contacts
+                .header__navigation
+                    .header__navigation__contacts
+                        .header__navigation__contacts_messangers
+                            a(href="https://wa.me/4957777777" target="_blank")
+                                img(src="./img/whatsapp.svg")
+                        .header__navigation__contacts_numbers
+                            a(href="tel:+77000011888") +7 700 001 18 88
+                    .header__navigation__nav_menu
+                        ul
+                            li
+                                a(href="#") About project
+                            li
+                                a(href="#") Location
+                            li
+                                a(href="#") Benefits
+                            li
+                                a(href="#") Why we are
+                            li
+                                 a(href="#") Payments methods
+                            li
+                                a(href="#") Contacts
 
-        section.header__banner.container
-            .header__banner__info
-                h1  Elite cottage village in Nur-Sultan city
-                a.header__banner_info-btn(href="#") Download presentation
-                h3 36 cottages
-                .header__banner__info__box
-                    div
-                        div 3
-                        div cottages #[br] 440 yard² #[br] 1195 yard²
-                    div
-                        div 33
-                        div cottages #[br] 214 yard² #[br] 597 yard²
+        section.header__banner
+            .container
+                .header__banner__info
+                    h1.modal-window__link  Elite cottage village in Nur-Sultan city
+                    a.header__banner_info-btn.modal-window__link(href="#") Download presentation
+                    h3 36 cottages
+                    .header__banner__info__box
+                        div
+                            div 3
+                            div cottages #[br] 440 yard² #[br] 1195 yard²
+                        div
+                            div 33
+                            div cottages #[br] 214 yard² #[br] 597 yard²
 
-            .header__banner__deadlines
-                p #[b Construction work] began in September 2021.
-                p #[b Completion date] for cottages - I quarter of 2022
-                p #[b The deadline] for the completion of the entire cottage town is the II quarter of 2022
+                .header__banner__deadlines
+                    p #[b Construction work] began in September 2021.
+                    p #[b Completion date] for cottages - I quarter of 2022
+                    p #[b The deadline] for the completion of the entire cottage town is the II quarter of 2022
 
     main
         section._1_about-project
@@ -237,7 +238,7 @@ body
                     p Leave your contacts and we will send you
                     form
                         input(type="text" placeholder="Your name")
-                        input(type="tel" placeholder="Phone number")
+                        input(type="number" placeholder="Phone number")
                         input(type="submit")
                 .technologies__bg-logo
                     img(src="./img/bg-logo__cherry.svg")
@@ -288,5 +289,16 @@ body
                     a(href="#") Technologies
                 li
                     a(href="#") Payments methods
+
+
+    .modal-window
+        .modal-window__wrap
+            .modal-window__content
+                h2.h2-title Download presentation
+                p Leave your contacts and we will send you
+                form
+                    input(type="text" placeholder="Your name")
+                    input(type="number" placeholder="Phone number")
+                    input(type="submit")
 
     script(src="./js/script.js")
