--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -15,6 +15,9 @@
 @import "./_7_payments/7_payments"
 @import "_footer/footer"
 
+//Components
+@import "_components/_modal_window/modal_window"
+
 //Responsive
 @import "_header/media_header"
 @import "./_1_about-project/media_1"
