--- a/app/sass/_nullstyle.sass
+++ b/app/sass/_nullstyle.sass
@@ -33,10 +33,11 @@ body
    -moz-text-size-adjust: 100%
    -webkit-text-size-adjust: 100%
 
-   //Dynamic properties
+   //Dynamic properties ===== //
    font-family:  "Fira sans", sans-serif
    font-size: 16px
    font-weight: 300
+   //===== Dynamic properties //
 
 input,
 button,
