--- a/dest/css/main.css
+++ b/dest/css/main.css
@@ -113,25 +113,25 @@ header {
   background: url("../img/header_bg.jpg") center -50px no-repeat fixed;
   color: #fff;
 }
-header nav.container {
+header nav .container {
   display: -webkit- flex;
   display: -ms- flex;
   display: flex;
   margin-bottom: 115px;
   justify-content: space-between;
 }
-header nav.container .header__logo a img {
+header nav .container .header__logo a img {
   max-width: 144px;
   max-height: 137px;
   min-width: 50px;
   min-height: 40px;
   width: 100%;
 }
-header nav.container .header__navigation {
+header nav .container .header__navigation {
   position: relative;
   padding-top: 71px;
 }
-header nav.container .header__navigation .header__navigation__contacts {
+header nav .container .header__navigation .header__navigation__contacts {
   position: absolute;
   top: 25px;
   right: 0;
@@ -140,16 +140,16 @@ header nav.container .header__navigation .header__navigation__contacts {
   display: flex;
   margin-bottom: 25px;
 }
-header nav.container .header__navigation .header__navigation__contacts .header__navigation__contacts_numbers {
+header nav .container .header__navigation .header__navigation__contacts .header__navigation__contacts_numbers {
   transition: all 1s ease;
 }
-header nav.container .header__navigation .header__navigation__contacts .header__navigation__contacts_numbers:active {
+header nav .container .header__navigation .header__navigation__contacts .header__navigation__contacts_numbers:active {
   transform: scale(0.97);
 }
-header nav.container .header__navigation .header__navigation__contacts .header__navigation__contacts_numbers:hover a {
+header nav .container .header__navigation .header__navigation__contacts .header__navigation__contacts_numbers:hover a {
   background-color: #dba069;
 }
-header nav.container .header__navigation .header__navigation__contacts .header__navigation__contacts_numbers a {
+header nav .container .header__navigation .header__navigation__contacts .header__navigation__contacts_numbers a {
   position: relative;
   margin-left: 35px;
   padding: 10px 20px 10px 52px;
@@ -158,26 +158,26 @@ header nav.container .header__navigation .header__navigation__contacts .header__
   border-radius: 3px;
   transition: all 1s ease;
 }
-header nav.container .header__navigation .header__navigation__contacts .header__navigation__contacts_numbers a:before {
+header nav .container .header__navigation .header__navigation__contacts .header__navigation__contacts_numbers a:before {
   content: url("../img/phone.svg");
   margin-right: 10px;
   position: absolute;
   top: 6px;
   left: 20px;
 }
-header nav.container .header__navigation .header__navigation__nav_menu ul {
+header nav .container .header__navigation .header__navigation__nav_menu ul {
   display: -webkit- flex;
   display: -ms- flex;
   display: flex;
 }
-header nav.container .header__navigation .header__navigation__nav_menu ul li {
+header nav .container .header__navigation .header__navigation__nav_menu ul li {
   position: relative;
   margin-left: 50px;
 }
-header nav.container .header__navigation .header__navigation__nav_menu ul li a {
+header nav .container .header__navigation .header__navigation__nav_menu ul li a {
   color: #fff;
 }
-header nav.container .header__navigation .header__navigation__nav_menu ul .header__navigation__nav_menu:after {
+header nav .container .header__navigation .header__navigation__nav_menu ul li:after {
   content: "";
   position: absolute;
   left: 0;
@@ -186,30 +186,30 @@ header nav.container .header__navigation .header__navigation__nav_menu ul .heade
   width: 1%;
   transition: all 0.5s ease;
 }
-header nav.container .header__navigation .header__navigation__nav_menu ul:active {
+header nav .container .header__navigation .header__navigation__nav_menu ul li:active {
   transform: scale(0.97);
 }
-header nav.container .header__navigation .header__navigation__nav_menu ul:hover:after {
+header nav .container .header__navigation .header__navigation__nav_menu ul li:hover:after {
   width: 100%;
   background-color: #DBA069;
 }
-header section.header__banner.container {
+header section.header__banner .container {
   display: -webkit- flex;
   display: -ms- flex;
   display: flex;
 }
-header section.header__banner.container .header__banner__info {
+header section.header__banner .container .header__banner__info {
   width: 100%;
   max-width: 846px;
   font-size: 1.25rem;
 }
-header section.header__banner.container .header__banner__info h1 {
+header section.header__banner .container .header__banner__info h1 {
   margin-bottom: 20px;
   font-size: 2.375rem;
   font-weight: 700;
   color: #ffffff;
 }
-header section.header__banner.container .header__banner__info a {
+header section.header__banner .container .header__banner__info a {
   max-width: 285px;
   display: block;
   margin-bottom: 40px;
@@ -219,51 +219,51 @@ header section.header__banner.container .header__banner__info a {
   background-color: #DBA069;
   transition: all 0.5s ease;
 }
-header section.header__banner.container .header__banner__info a:hover {
+header section.header__banner .container .header__banner__info a:hover {
   color: #ffffff;
 }
-header section.header__banner.container .header__banner__info a:active {
+header section.header__banner .container .header__banner__info a:active {
   transform: scale(0.97);
   background-color: #b48559;
 }
-header section.header__banner.container .header__banner__info h3 {
+header section.header__banner .container .header__banner__info h3 {
   margin-bottom: 20px;
   font-size: 2rem;
   font-weight: 700;
   color: #ffffff;
 }
-header section.header__banner.container .header__banner__info .header__banner__info__box {
+header section.header__banner .container .header__banner__info .header__banner__info__box {
   display: -webkit- flex;
   display: -ms- flex;
   display: flex;
 }
-header section.header__banner.container .header__banner__info .header__banner__info__box div {
+header section.header__banner .container .header__banner__info .header__banner__info__box div {
   display: -webkit- flex;
   display: -ms- flex;
   display: flex;
   margin: auto 0;
   color: #ffffff;
 }
-header section.header__banner.container .header__banner__info .header__banner__info__box div div:first-child {
+header section.header__banner .container .header__banner__info .header__banner__info__box div div:first-child {
   font-size: 8rem;
   color: #ffffff;
 }
-header section.header__banner.container .header__banner__info .header__banner__info__box div:first-child {
+header section.header__banner .container .header__banner__info .header__banner__info__box div:first-child {
   margin-right: 26px;
   color: #ffffff;
 }
-header section.header__banner.container .header__banner__deadlines {
+header section.header__banner .container .header__banner__deadlines {
   width: 100%;
   max-width: 296px;
   line-height: 1.375rem;
 }
-header section.header__banner.container .header__banner__deadlines p {
+header section.header__banner .container .header__banner__deadlines p {
   color: #ffffff;
 }
-header section.header__banner.container .header__banner__deadlines p b {
+header section.header__banner .container .header__banner__deadlines p b {
   color: #ffffff;
 }
-header section.header__banner.container .header__banner__deadlines p:not(:last-child) {
+header section.header__banner .container .header__banner__deadlines p:not(:last-child) {
   margin-bottom: 20px;
 }
 
@@ -591,18 +591,18 @@ main section._5_why-nura .container .why-nura__content-box .why-nura__img-box .w
   z-index: 1;
   background: url("../img/3_location__dots.svg");
 }
+main section._5_why-nura .container .why-nura__content-box .why-nura__img-box:hover img.why-nura__img {
+  bottom: 53px;
+  left: 42px;
+}
+main section._5_why-nura .container .why-nura__content-box .why-nura__img-box:hover .why-nura__bg-dots {
+  top: 35px;
+  right: 65px;
+}
 main section._5_why-nura .container .why-nura__content-box .why-nura__content-box__inner {
   display: -webkit- flex;
   display: -ms- flex;
   display: flex;
-}
-main section._5_why-nura .container .why-nura__content-box .why-nura__content-box__inner .why-nura__img-box:hover img.why-nura__img {
-  bottom: 53px;
-  left: 42px;
-}
-main section._5_why-nura .container .why-nura__content-box .why-nura__content-box__inner .why-nura__img-box:hover .why-nura__bg-dots {
-  top: 35px;
-  right: 65px;
 }
 main section._5_why-nura .container .why-nura__content-box .why-nura__content-box__inner ul:last-child {
   margin-left: 15px;
@@ -839,8 +839,84 @@ footer .container ul li:not(:last-child) {
   margin-right: 60px;
 }
 
+body {
+  position: relative;
+}
+body .modal-window {
+  width: 100%;
+  height: 100%;
+  display: -webkit- flex;
+  display: -ms- flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+body .modal-window .modal-window__wrap {
+  padding: 20px 40px;
+  background-image: url("../img/bg-logo__cherry.svg");
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: #fff;
+  border: 8px #842231 solid;
+  border-radius: 8px;
+}
+body .modal-window .modal-window__wrap .modal-window__content h2 {
+  margin-bottom: 12px;
+  text-align: center;
+}
+body .modal-window .modal-window__wrap .modal-window__content p {
+  margin-bottom: 36px;
+  font-size: 1.3125rem;
+  font-weight: 400;
+  text-align: center;
+}
+body .modal-window .modal-window__wrap .modal-window__content form input {
+  margin: 0 auto 20px auto;
+  padding: 15px 0 15px 25px;
+  max-width: 280px;
+  width: 100%;
+  display: block;
+  color: #7E868E;
+  background-color: #E5E5E5;
+  border-radius: 8px;
+}
+body .modal-window .modal-window__wrap .modal-window__content form input:last-child {
+  padding: 15px 0;
+  font-size: 1.125rem;
+  font-weight: 500;
+  color: #ffffff;
+  background-color: #842231;
+  cursor: pointer;
+}
+
+.modal-window {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s ease;
+}
+
+.modal-window.open {
+  visibility: visible;
+  opacity: 1;
+}
+
+body.lock {
+  overflow: hidden;
+}
+
+@media (max-width: 480px) {
+  body .modal-window .modal-window__wrap {
+    padding: 20px 10px;
+  }
+}
 @media (max-width: 1024px) {
-  header nav.container .header__navigation .header__navigation__nav_menu ul li {
+  header nav .container .header__navigation .header__navigation__nav_menu ul li {
     margin-left: 13px;
   }
 }
@@ -848,37 +924,37 @@ footer .container ul li:not(:last-child) {
   header {
     padding-top: 50px;
   }
-  header nav.container {
+  header nav {
     display: none;
   }
-  header section.header__banner.container {
+  header section.header__banner .container {
     display: initial;
   }
-  header section.header__banner.container .header__banner__info h1,
-header section.header__banner.container .header__banner__info h3 {
+  header section.header__banner .container .header__banner__info h1,
+header section.header__banner .container .header__banner__info h3 {
     text-align: center;
   }
-  header section.header__banner.container .header__banner__info a {
+  header section.header__banner .container .header__banner__info a {
     display: none;
   }
-  header section.header__banner.container .header__banner__info .header__banner__info__box {
+  header section.header__banner .container .header__banner__info .header__banner__info__box {
     justify-content: center;
   }
-  header section.header__banner.container .header__banner__deadlines {
+  header section.header__banner .container .header__banner__deadlines {
     max-width: 100%;
     text-align: center;
   }
 }
 @media (max-width: 576px) {
-  header section.header__banner.container .header__banner__info .header__banner__info__box {
+  header section.header__banner .container .header__banner__info .header__banner__info__box {
     justify-content: space-evenly;
     margin-bottom: 30px;
   }
-  header section.header__banner.container .header__banner__info .header__banner__info__box div {
+  header section.header__banner .container .header__banner__info .header__banner__info__box div {
     flex-direction: column;
     text-align: center;
   }
-  header section.header__banner.container .header__banner__info .header__banner__info__box div div:first-child {
+  header section.header__banner .container .header__banner__info .header__banner__info__box div div:first-child {
     margin: 0;
   }
 }
