--- a/app/sass/_header/_media_header.sass
+++ b/app/sass/_header/_media_header.sass
@@ -45,8 +45,9 @@
 
 @include media_mobile-xxs
   header
-    section.header__banner.container
-      .header__banner__info
-        .header__banner__info__box
-          div
-            margin: 0
+    section.header__banner
+      .container
+        .header__banner__info
+          .header__banner__info__box
+            div
+              margin: 0
