--- a/app/sass/_nullstyle.sass
+++ b/app/sass/_nullstyle.sass
@@ -37,6 +37,8 @@ body
    font-family:  "Fira sans", sans-serif
    font-size: 16px
    font-weight: 300
+body
+   position: relative
    //===== Dynamic properties //
 
 input,
