--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -17,6 +17,8 @@
 
 //Components
 @import "_components/_modal_window/modal_window"
+@import "_components/_burder_menu/burger_menu"
+
 
 //Responsive
 @import "_header/media_header"
