--- a/app/index.pug
+++ b/app/index.pug
@@ -38,8 +38,8 @@ body
         section.header__banner
             .container
                 .header__banner__info
-                    h1.modal-window__link  Elite cottage village in Nur-Sultan city
-                    a.header__banner_info-btn.modal-window__link(href="#") Download presentation
+                    h1  Elite cottage village in Nur-Sultan city
+                    a.header__banner_info-btn(href="#") Download presentation
                     h3 36 cottages
                     .header__banner__info__box
                         div
@@ -53,6 +53,7 @@ body
                     p #[b Construction work] began in September 2021.
                     p #[b Completion date] for cottages - I quarter of 2022
                     p #[b The deadline] for the completion of the entire cottage town is the II quarter of 2022
+
 
     main
         section._1_about-project
@@ -237,8 +238,8 @@ body
                     h2.h2-title Download presentation
                     p Leave your contacts and we will send you
                     form
-                        input(type="text" placeholder="Your name")
-                        input(type="number" placeholder="Phone number")
+                        input(type="text" placeholder="Your name" required)
+                        input(type="number" placeholder="Phone number" required)
                         input(type="submit")
                 .technologies__bg-logo
                     img(src="./img/bg-logo__cherry.svg")
@@ -278,6 +279,7 @@ body
                                     a(href="https://www.instagram.com/nura_premier/" target="_blank") @nura.premier
                             img(src="./img/7_payments_qr-code.svg")
 
+
     footer
         .container
             ul
@@ -290,6 +292,29 @@ body
                 li
                     a(href="#") Payments methods
 
+    .burger-menu__btn-open
+        .burger-menu__btn-open__inner
+
+    .burger-menu
+        .burger-menu__wrap
+            .burger-menu__btn-close
+                .burger-menu__btn-close__inner
+            .burger-menu__content
+                ul
+                    li
+                        a(href="#") About project
+                    li
+                        a(href="#") Location
+                    li
+                        a(href="#") Benefits
+                    li
+                        a(href="#") Why we are
+                    li
+                        a(href="#") Payments methods
+                    li
+                        a(href="#") Contacts
+
+                a.modal-window__link(href="#") Download presentation
 
     .modal-window
         .modal-window__wrap
@@ -297,8 +322,8 @@ body
                 h2.h2-title Download presentation
                 p Leave your contacts and we will send you
                 form
-                    input(type="text" placeholder="Your name")
-                    input(type="number" placeholder="Phone number")
-                    input(type="submit")
+                    input(type="text" placeholder="Your name" required)
+                    input(type="number" placeholder="Phone number" required)
+                    input.close-modal-window(type="submit")
 
     script(src="./js/script.js")
