--- a/app/sass/_components/_modal_window/modal_window.sass
+++ b/app/sass/_components/_modal_window/modal_window.sass
@@ -1,6 +1,4 @@
 body
-  position: relative
-
   .modal-window
     width: 100%
     height: 100%
@@ -12,8 +10,15 @@ body
     left: 0
     z-index: 5
     background-color: rgba(0, 0, 0, 0.5)
+    overflow-x: hidden
+    overflow-y: auto
+    opacity: 0
+    visibility: hidden
+    transition: all .5s ease
 
     .modal-window__wrap
+      position: relative
+      z-index: 6
       padding: 20px 40px
       background-image: url("../img/bg-logo__cherry.svg")
       background-position: right bottom
@@ -22,7 +27,6 @@ body
       background-color: #fff
       border: 8px #842231 solid
       border-radius: 8px
-
 
       .modal-window__content
         h2
@@ -54,17 +58,9 @@ body
             background-color: #842231
             cursor: pointer
 
-.modal-window
-  opacity: 0
-  visibility: hidden
-  transition: all .5s ease
-
-.modal-window.open
-  visibility: visible
-  opacity: 1
-
-body.lock
-  overflow: hidden
+  .modal-window.open
+    visibility: visible
+    opacity: 1
 
 @include media_mobile
   body
